Sunday, February 22, 2009
	Chris Thielen:
		* More console & Lua work

Saturday, February 21, 2009
	Chris Thielen:
		* Fixed an issue with fonts not drawing correctly under Mac OS X
		* Beginnings of console work
		* Fixed GCC compiler identification

Wednesday, February 18, 2009
	Chris Thielen:
		* (Outside) Lua research for in-game bridge
		* Beginnings of HUD messaging system

Wednesday, February 4, 2009
	Chris Thielen:
		* Changed planet radar color to something more visible
		* Cleaned up compiler warnings under GCC 4.3

Monday, February 2, 2009
	Chris Thielen:
		* Received permission from Brian Kent to distribute his
		Visitor bitmap font (choosen by Niros, the designer of the UI
		and HUD) with Epiar. It is visitor1.ttf and visitor2.ttf, and
		the similarly named .af files.

Sunday, February 1, 2009
	Chris Thielen:
		* Fixed a bug with glScissor (it doesn't use our established
		ortho??)
		* Fixed UI dragging errors introduced by new coordinate system
		* Fixed a bug where Font renderings weren't showing up

Saturday, January 31, 2009
	Chris Thielen:
		* Upgraded to afont-0.9
		* Created Debug/graphics.cpp, Graphics/image2.cpp and
		--graphics-demo to work on replacement Image class
		* Graphics work, ensuring functions work, writing clean new
		Image class (currently called Image2)
		* Fixed a bug in DrawCircle where circle would be incomplete
		(needed to go a little more than once around for the verticies
		to fit together in OGL logic or something)
		* Fixed the image and coordinate issues but reverted back to
		  video buffer style coordinates and now all the math and
		  angles need to be re-examined...
		* Fixed the major math issues

Friday, January 30, 2009
	Chris Thielen:
		* Reverted back font changes as Jared has sent me afont-0.7 which should have OpenGL fixes we need (afont is faster than NeHe's freetype/OpenGL code as fonts are pre-rendered and saved)

Monday, January 19, 2009
	Chris Thielen: