@@ -1,3 +1,7 @@
+Monday, February 23, 2009
+	Chris Thielen:
+		* Implemented 'echo' function for Lua console
+
 Sunday, February 22, 2009
 	Chris Thielen:
 		* More console & Lua work
